# trade_csv

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
data/: Orders_042820.csv
src/: main.rs
