[package]
name = "trade_csv"
version = "0.1.0"
authors = ["Jovaun McGregor <jovaun_mcgregor@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polish = "*" #Testing Framework for Rust
log = "0.4.8" # Lightweight logging facade
indicatif = "*" #Helps you build command line interfaces that report progress to users
csv = "1.1.3"  #CSV reader and writer for Rust, with support for Serde
serde = {version="1.0.106", features = ["derive"]} # framework for serializing and deserializing Rust data structures efficiently and generically
chrono = "0.4.11" # Date and Time Framework
chrono_tz = "0.5" # Adds Timezone support to chrono

